--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^3.6.2",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "mongoose": "^6.1.8"
