--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3"
   }
 }
