--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
+  "engines":{ 
+    "node": "16.x"
+},
   "scripts": {
     "start": "node server/server.js --ignore client",
     "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "concurrently \"cd server && npm i\" \"cd client && npm i\"",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm run build"
+    "install": "cd client && npm i && cd ../server && npm i"
   },
   "author": "",
   "license": "ISC",
